# maze

./: .gitignore  LICENSE.md  MANIFEST.in  MazeGui.ui  README.md  app.py  build_exe.bat  build_macos.sh  build_windows.bat  mazegui.py  mazes.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: build_tests.yml  tests.yml
app/: app.py  app.spec  maze_selector.py  percolation.py
app/common/: colors.py  config.py  events.py  logging.py  path.py
app/common/options/: __init__.py  maze_sizes.py  maze_types.py  show_maze_generation.py  window_size.py
app/common/themes/: __init__.py  base.py  default_theme.py  light_theme.py
app/mazes/: __init__.py  base.py  depth_first_maze.py  kruskal_maze.py  maze_factory.py  maze_selector.py  prim_maze.py  random_filled_maze.py  recursive_division_maze.py
app/menus/: __init__.py  base.py  finished_menu.py  main_menu.py  maze_menu.py  options_menu.py
app/orm/: __init__.py  base.py  scores.py
app/processors/: __init__.py  base.py  display_processor.py  exit_processor.py  finish_processor.py  maze_selection_processor.py  options_processor.py  restart_processor.py
app/resources/: config.cfg  default_config.cfg  user_config.cfg
app/solvers/: __init__.py  solver_factory.py
app/tests/: test_depth_first_maze.py  test_kruskal_maze.py  test_percolation_check.py  test_prim_maze.py  test_recursive_maze.py
app/ui/: MazeGui.ui
tests/: test_a_star_solver.py  test_depth_first_maze.py  test_kruskal_maze.py  test_prim_maze.py  test_recursive_maze.py  test_wilson_maze.py
(+20 files in other folders)
