[metadata]
name = maze
version = file: ./app/VERSION.txt
license = MIT
license_files = LICENSE.md
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    =app
install_requires =
    numpy
    scipy
    peewee
    pygame
zip_safe = no

[options.packages.find]
where = app
include = *

[options.extras_require]
testing =
    pytest
    mypy
    flake8
    tox

[options.package_data]
maze = py.typed

[flake8]
max-line-length = 88
extend-ignore =
    E203
